<resources>
    <string name="app_name">MedicAlert_v3</string>
    <string name="action_settings">Settings</string>
    <string name="activity_settings_title">Settings</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="action_new">Ajouter ordonnance</string>
    <string name="action_download">Download (Pull)</string>
    <string name="action_upload">Enregistrer ordonnance</string>
    <string name="action_delete">Delete</string>
    <string name="Ordonnance">Ordonnance</string>
    <string name="Famille">Famille</string>
    <string name="new_task">Nouveau medicament</string>
    <string name="enter_description">Nom du medicament</string>
    <string name="task_not_created">Task not created because description is empty</string>
    <string name="completed">COMPLETED</string>
    <string name="replication_running">Replication is running</string>
    <string name="replication_completed">Sauvegarde</string>
    <string name="replication_error">Erreur sauvegarde</string>
    <string name="task_created">Medicament cree</string>
    <string name="pref_summary_api_key">The api key used to replicate to/from your cloudant account.</string>
    <string name="pref_title_api_key">API Key</string>
    <string name="pref_summary_api_password">The api password used to replicate to/from your cloudant account.</string>
    <string name="pref_title_api_password">API Password</string>
    <string name="pref_summary_username">You cloudant user name, and it is also used to determine your cloudant server url.</string>
    <string name="pref_title_username">Cloudant user name</string>
    <string name="pref_summary_dbname">You cloudant db name, and this is the db used in replication.</string>
    <string name="pref_title_dbname">Cloudant db name</string>
    <string name="ordonnance">Ordonnance</string>
    <string name="famille">Famille</string>
    <string name="pris">PRIS !</string>
    <string name="future_prise">future prise</string>
    <string name="liste_de_la_famille">Liste de la famille</string>
    <string name="ajouter_un_membre">Ajouter un membre</string>
    <string name="supprimer_un_membre">Supprimer un membre</string>
    <string name="ajouter_un_medicament">Ajouter un medicament</string>
    <string name="retirer_un_medicament">Retirer un medicament</string>
    <string name="nom_du_medicament">Nom du medicament</string>
    <string name="renseignez_la_posologie">Renseignez la posologie</string>
    <string name="matin">Matin</string>
    <string name="midi">Midi</string>
    <string name="soir">Soir</string>
    <string name="duree_en_jours">Duree (en jours)</string>
    <string name="nombre_de_comprim_dans_une_boite">Nombre de comprimé dans une boite</string>
    <string name="nombre_de_comprime">Nombre de comprime</string>
    <string name="nb_boite">Nombre de boite</string>
    <string name="prochain_medicament">Prochain medicament</string>
    <string name="valider">Valider</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="stockVideTextView">Stock de medicament vide pour le moment</string>
    <string name="publish">publish</string>
</resources>
